--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "js-cookie": "^3.0.1",
+    "leaflet": "^1.9.2",
+    "leaflet-ant-path": "^1.3.0",
     "mitt": "^3.0.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-easy-lightbox": "^1.9.0",
+    "vue-loading-overlay": "5.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
